@@ -1,5 +1,5 @@
 /* MI Command Set - MI Option Parser.
-   Copyright (C) 2000, Free Software Foundation, Inc.
+   Copyright (C) 2000, 2001 Free Software Foundation, Inc.
    Contributed by Cygnus Solutions (a Red Hat company).
 
    This file is part of GDB.
@@ -21,7 +21,7 @@
 
 #include "defs.h"
 #include "mi-getopt.h"
-#include "string.h"
+#include "gdb_string.h"
 
 int
 mi_getopt (const char *prefix,
